# lqr_controller

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  lqr_controller.xml  package.xml
include/lqr_controller/: LQR.hpp  Tool.h  lqr_controller.hpp  problem.hpp
install/: local_setup.sh  setup.sh
log/: latest_build
src/: LQR.cpp  Tool.cpp  lqr_controller.cpp
