<?xml version="1.0"?>
<?xml-model href="" schematypens=""?>
<package format="3">
  <name>lqr_controller</name>
  <version>0.0.0</version>
  <description>LQR controller</description>
  <maintainer email="TODO@gmail.com">TODO</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav2_common</depend>
  <depend>nav2_core</depend>
  <depend>nav2_util</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>pluginlib</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <!-- <depend>backward_ros</depend> -->

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>nav2_controller</test_depend>
  <test_depend>nav2_costmap_2d</test_depend>
  <test_depend>nav2_util</test_depend>
  <test_depend>nav2_core</test_depend>
  <test_depend>nav_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/lqr_controller.xml" />
  </export>

</package>
